--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ x-shared-env: &shared-env
   API_PORT: ${API_PORT:-6868}
   API_HOST: ${API_HOST:-0.0.0.0}
 
+  APP_PORT: ${API_PORT:-6869}
+  APP_HOST: ${API_HOST:-0.0.0.0}
+
   POSTGRES_USER: ${POSTGRES_USER:-postgres}
   POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
   POSTGRES_DB: ${POSTGRES_DB:-chatbot}
@@ -33,6 +36,26 @@ services:
     depends_on:
       - postgres
 
+
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile-app
+
+    image: chatbot-app:latest
+
+    entrypoint: chainlit run demo/app.py --port ${APP_PORT:-6869} --host ${APP_HOST:-0.0.0.0}
+
+    environment:
+      CHATBOT_API_BASE: http://api:${API_PORT:-6868}
+
+    ports:
+      - '${APP_PORT:-6869}:${APP_PORT:-6869}'
+
+    depends_on:
+      - api
+
+    restart: unless-stopped
 
   postgres:
     image: pgvector/pgvector:pg16
